[package]
name = "the_snakes"
version = "0.1.0"
authors = ["qiujiangkun <qiujiangkun@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"

[dependencies.bevy]
version = "0.5"
# Disable the default features if there are any that you do not want
default-features = false
features = [
    # These are the default features:
    # (keep whichever you like)
    "bevy_dynamic_plugin",
    "render",
    "bevy_wgpu",
    "bevy_winit",
#    "bevy_gilrs",
#    "bevy_gltf",
#    "bevy_audio",
    "png",
#    "hdr",
#    "mp3",
    "x11",
    # These are other features that may be of interest:
    # (add any of these that you need)
#    "bmp",
#    "tga",
#    "dds",
#    "jpeg",
#    "wav",
#    "flac",
#    "vorbis",
#    "dynamic",
#    "serialize",
#    "trace",
#    "wgpu_trace",
#    "wayland"
]
# Compile all the *dependencies* in optimized release mode even if `--release` is not passed in
[profile.dev]
opt-level = 3
debug = false

# But compile the project itself in debug mode if `--release` is not passed in
[profile.dev.package.the_snakes]
opt-level = 0
debug = true
